<resources>
    <string name="app_name">Right Life</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="specially_offer_20_off_2499">Specially offer: 20% off <strike>₹ 2499</strike></string>
    <string name="title_activity_rlpage">RLPageActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article">The fourth-most common mineral in your body is magnesium. Without it, your body cannot function correctly.
        \n\nThe nutrient is necessary for hundreds of metabolic processes as well as numerous other critical biological processes, such as the synthesis of vital proteins and the production of energy. \n\nAmong the dietary sources of magnesium are: \n\n• legumes, seeds, and nuts \n• whole grains \n• green leafy vegetables \n• fish and meat have lower quantities.\n
        Magnesium deficiency is thought to affect 15% to 20% of teenagers and 9% to 17% of adults \n\n A lack of magnesium may contribute to the emergence of diseases like cardiovascular disease, type 2 diabetes, Alzheimer’s disease, and atherosclerosis—an artery constriction brought on by a plaque buildup of cholesterol.</string>
    <string name="str_your_height">Your Height</string>
    <string name="str_enter_your_dob">Enter your date of birth?</string>
    <string name="str_your_weight">Your Weight</string>
    <string name="str_waist">Waist</string>
    <string name="str_blood_pressure">Blood Pressure</string>
    <string name="str_systolic_bp">Systolic Blood Pressure</string>
    <string name="str_diastolic_bp">Diastolic Blood Pressure</string>
    <string name="str_ft_inch">ft.inch</string>
    <string name="str_cms">cms</string>
    <string name="str_kgs">Kgs</string>
    <string name="str_lbs">lbs</string>
    <string name="str_inches">inches</string>
    <string name="dob_error"> User must be at least 15 years old</string>
    <string name="height_error"> User must enter height</string>
    <string name="str_continue">Continue</string>
    <string name="know_each_other">Let’s get to know you.</string>
    <string name="know_your_name">What should we call you?</string>
    <string name="error_username">Invalid name. Please use letters only (no numbers or symbols).</string>
    <string name="wellness_focus">What’s your wellness focus?</string>
    <string name="pick_up_goal">Pick one goal. We’ll take care of the rest.</string>
    <string name="str_think_right">ThinkRight</string>
    <string name="str_move_right">MoveRight</string>
    <string name="str_eat_right">EatRight</string>
    <string name="str_sleep_right">SleepRight</string>
    <string name="boost_mental_clarity">Boost Mental Clarity.</string>
    <string name="stay_active">Stay Active.</string>
    <string name="eat_healthy">Eat Healthier.</string>
    <string name="sleep_better">Sleep Better.</string>
    <string name="your_journey_your_way">Your journey, your way!</string>
    <string name="choose_goals">Pick the one goal that\'s your top priority at the moment.</string>
    <string name="sleep_intro">
        Understanding your sleep is essential to optimizing recovery and overall well-being.
        Your Sleep Analysis in <b>RightLife</b> provides a detailed breakdown of your sleep performance, consistency, and recovery.
    </string>
    <string name="sleep_performance">
        Your sleep performance measures how much sleep you got versus how much you needed based on your body’s demands.\n
        • <b>Sleep Needed</b> – Adjusts dynamically based on recent activity levels, strain, and recovery needs.\n
        • <b>Sleep Obtained</b> – The total time you slept during the night.\n
        RightLife calculates your sleep performance score as a percentage of your actual sleep relative to your goal.
        <b>Aim for 85% or higher</b> to optimize recovery and energy levels.
    </string>
    <string name="sleep_consistency">
        Sleep consistency measures how regularly you go to bed and wake up within a set window.\n
        • <b>Higher consistency</b> helps regulate your circadian rhythm.\n
        • <b>Lower consistency</b> contributes to fatigue, poor recovery, and cognitive decline.\n
        RightLife tracks a <b>4-day rolling sleep consistency</b> to provide insights.
    </string>
    <string name="sleep_stages">
        Your sleep is divided into four stages:\n
        • <b>Awake</b> – Time awake during the night.\n
        • <b>Light Sleep</b> – Supports memory consolidation.\n
        • <b>Deep Sleep</b> – Vital for recovery and immunity.\n
        • <b>REM Sleep</b> – Important for cognition and emotion.
    </string>
    <string name="restorative_sleep">
        <b>Restorative sleep</b> includes Deep Sleep + REM Sleep.\n
        • <b>Deep Sleep</b> supports muscle repair and hormone regulation.\n
        • <b>REM Sleep</b> improves memory and emotional processing.\n
        A high percentage of restorative sleep means <b>efficient recovery</b>.
    </string>
    <string name="rightlife_does">
        🔹 <b>Calculates Sleep Need</b> – Adjusted dynamically.\n
        🔹 <b>Evaluates Sleep Performance</b> – Measures your actual sleep vs. need.\n
        🔹 <b>Analyzes Consistency</b> – Tracks sleep/wake regularity.\n
        🔹 <b>Tracks Sleep Stages</b> – Light, Deep, REM (Wearable only).\n
        🔹 <b>Monitors Restorative Sleep</b> – Deep + REM Sleep impact.
    </string>
    <string name="what_to_do">
        ✅ <b>Maintain a Regular Sleep Schedule</b> – Bedtime/wake within 30–60 minutes.\n
        ✅ <b>Track Sleep</b> – Enable wearable or log manually.\n
        ✅ <b>Aim for 85%+ Sleep Performance</b> – Hit your sleep target.\n
        ✅ <b>Improve Restorative Sleep</b> – Create a good sleep environment.\n
        ✅ <b>Monitor Trends</b> – Use consistency scores and trend arrows.\n\n
        Better sleep = <b>better recovery, sharper focus, improved performance</b>.
    </string>
</resources>