<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/header_think_right" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/str_think_right"
            android:textColor="@color/color_think_right"
            android:textSize="26sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_ur_journey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_header"
        android:layout_margin="20dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/your_journey_your_way"
        android:textColor="@color/txt_color_header"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_choose_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ur_journey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/choose_goals"
        android:textColor="@color/txt_color_header"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wellness_focus_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_str"
        android:layout_above="@id/btn_continue"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_continue"
        android:textSize="@dimen/textsize_large"
        android:fontFamily="@font/dmsans_bold"
        android:backgroundTint="@color/rightlife"
        android:textColor="@color/white"
        android:enabled="false"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>